[package]
name = "state"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
description = "SQLite-backed application state"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { version = "2.5.0", default-features = false }
serde = { workspace = true }
stellar = { workspace = true }
types = { workspace = true, features = ["rusqlite"] }

[build-dependencies]
hex = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
prover = { workspace = true }

[lints]
workspace = true
